[fix] Fix z-index on breadcrumbs and navbar

--- a/src/components/Breadcrumbs/Breadcrumbs.module.scss
+++ b/src/components/Breadcrumbs/Breadcrumbs.module.scss
@@ -2,6 +2,8 @@
   display: flex;
   gap: 1em;
   padding: 2em 0 3em 1em;
+  position: relative;
+  z-index: -2;
 
   .link {
     text-decoration: none;
