--- a/src/pages/Details/index.module.scss
+++ b/src/pages/Details/index.module.scss
@@ -5,7 +5,6 @@
     align-items: center;
     background-color: var(--bg-tertiary);
     padding: 2em 1em 2em 1em;
-    z-index: 999;
     position: relative;
 
     p {
@@ -32,6 +31,7 @@
     position: absolute;
     background-color: var(--bg-primary);
     transition: transform 0.6s ease-in-out;
+    z-index: -1;
 
     &.active {
       transform: translateY(0);
